--- a/client/src/styles/base.css
+++ b/client/src/styles/base.css
@@ -8,3 +8,8 @@
   font-stretch: 75% 125%;
   src: url('../fonts/Mona-Sans.var.woff2') format('woff2');
 }
+.article:hover {
+  background-color: #f3f4f6; /* Change background color on hover */
+  color: #4b5563; /* Change text color on hover */
+  /* Add more hover styles as needed */
+}
